@@ -1,5 +1,16 @@
 2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* godmode/agentes/agent_template.php
+	godmode/agentes/module_manager_editor_common.php,
+	godmode/agentes/module_manager.php,
+	godmode/agentes/modificar_agente.php,
+	godmode/agentes/configurar_agente.php,
+	godmode/agentes/planned_downtime.php,
+	godmode/agentes/agent_manager.php: Moved manage agent menu from operation
+	to administration menu.
+
+2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* godmode/agentes/agent_template.php,
 	godmode/agentes/fields_manager.php,
 	godmode/agentes/agent_conf_gis.php,
